@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200112"
-#define public MagickPackageReleaseDate "snapshot-20200112"
+#define public MagickPackageVersionAddendum ".020200118"
+#define public MagickPackageReleaseDate "snapshot-20200118"
